--- a/index.html
+++ b/index.html
@@ -1,70 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/style/global.css">
+    <link rel="stylesheet" href="assets/style/style.css">
 </head>
+
 <body>
-<header>
-    <nav>
-        
+    <header id="home">
+        <nav>
+            <ol>
+                <li>
+                    universe
+                </li>
+            </ol>
+
             <ul>
-                <li id="li_left">universe</li>
-                <li class="li_right">Home</li>
-                <li class="li_right">Sobre</li>
-                <li class="li_right">Contate Me</li>
+                <li class="li_right"><a  href="#home">Home</a></li>
+                <li class="li_right"><a href="#sobre">Sobre</a></li>
+                <li class="li_right"><a href="#quem">Contate Me</a></li>
             </ul>
-        
-    </nav>
-</header>    
 
-<main>
-<section>
-    <h2>Bem Vindos a um Novo universo</h2>
-    <h1><strong>Diferentes mundos para diferentes pessoas</strong></h1>
-    <p>Ola este e meu mundo e vim te aprensentar um pouco de mim.</p>
-    <img width="250px" src="assets/media/fotos/astronauta.svg" alt="">
-    <button type="button"><a href="#quem">explore</a></button>
-</section>
+        </nav>
+    </header>
 
-<article id="#quem">
-    <h1>Quem Sou eu?</h1>
-    <p>Ola meu nome e christian, tenho 23 anos, e sou novo na area de tecnologia, meus hobbies sao jogar e cuidar de plantas (tambem sou novo nisso). <br>
-        Sou de Jundiapeba,um bairro de Mogi das Cruzes SP, sou apaixonado por games mesmo sendo ruim na maioria <br> e quero comecar com desenvolvimento web e depois seguir outros ramos da tecnologia.
-    </p>
-    <img width="200px"  src="assets/media/fotos/IMG_20201128_131059467.png" alt="minha foto estou com cabelo cacheado, bigode e cavanhaque e com sorriso.">
-   <p> <button><a href="https://github.com/christianfelps">GitHub</a></button>  <span>3 seguidores</span>  <span>29 repositorios</span></p>
-</article>
-<form action="">
-    <label for="name">Nome</label>
-    <input type="text">
-    <label for="email">Email</label>
-    <input type="email" name="" id="">
-    <label for="subeject">assunto</label>
-    <input type="text">
-    <label for="">Mensagem</label>
-    <textarea name="" id=""></textarea>
-    <button type="submit">Enviar</button>
-</form>
-    <article>
-        <h1><strong>Me Contate</strong></h1>
-        <p> Aqui vou deixar minhas redes sociais caso queira se comunicar comigo, ou fazer propostas estou aberto a novas experiencias </p>
+    <main>
+        <section >
+            <div class="section1">
+                <h1>Bem Vindos a um Novo universo</h1>
+                <h2><strong>Diferentes mundos para <br> diferentes pessoas</strong></h2>
+                <p>Ola este e meu mundo e vim te aprensentar um pouco de mim.</p>
+                <br>
+                <a href="https://comandosgit.github.io" target="_blank">Explore</a>
 
-        <p>
-              <a href="https://www.linkedin.com/in/christian-a-8a4084137/"> <img src="assets/media/fotos/linkedin.svg" alt=""></a> 
-             <a href="https://github.com/christianfelps"><img src="assets/media/fotos/github.svg" alt=""> </a>
-             <a href=""> <img src="assets/media/fotos/instagram.svg" alt=""></a>
-        </p>
+            </div>
+
+            <div class="section2">
+                <img src="assets/media/fotos/astronauta.svg" alt="">
+            </div>
+        </section>
+
+        <section class="main2">
+
+            <div class="section3" id="sobre">
+                <h1>Quem Sou eu?</h1>
+                <p>Ola meu nome e christian, tenho 23 anos, e sou novo na area de tecnologia, meus hobbies sao jogar e
+                    cuidar de plantas (tambem sou novo nisso). <br>
+                    Sou de Jundiapeba,um bairro de Mogi das Cruzes SP, sou apaixonado por games mesmo sendo ruim na
+                    maioria <br> e quero comecar com desenvolvimento web e depois seguir outros ramos da tecnologia.
+                </p>
+                <p>
+                    <a href="https://github.com/christianfelps">GitHub</a> <span>3 seguidores</span> <span>29
+                        repositorios</span>
+                </p>
+
+            </div>
+
+            <div>
+                <img id="fotoperfil" src="assets/media/fotos/IMG_20201128_131059467.png"
+                    alt="minha foto estou com cabelo cacheado, bigode e cavanhaque e com sorriso.">
+            </div>
+
+        </section>
+        <section>
+            <article>
+                <h1><strong id="quem">Me Contate</strong></h1>
+                <p> Aqui vou deixar minhas redes sociais caso queira <br> se comunicar comigo, ou fazer propostas estou
+                    aberto a novas experiencias </p>
+
+                <div class="images">
+                    <p>
+                        <a href="https://www.linkedin.com/in/christian-a-8a4084137/" target="_blank"> <img class="logos"
+                                width="50px" src="assets/media/fotos/linkedin.svg"
+                                alt="clique para ir no meu linkedin"></a>
+                        <a href="https://github.com/christianfelps" target="_blank"><img width="50px" class="logos"
+                                src="assets/media/fotos/github.svg" alt="clique para ir no meu github"> </a>
+                        <a href="https://www.instagram.com/christianfalvim/" target="_blank"> <img width="50px"
+                                class="logos" src="assets/media/fotos/instagram.svg"
+                                alt="clique para ir no meu instagram"></a>
+                    </p>
+                </div>
 
 
-    </article>
-<footer>
-    <p>Feito Por Christian Alvim 2024</p>
-</footer>
 
-</main>
+            </article>
+
+            <form action="">
+                <label for="name">Nome:</label>
+                <input type="text">
+                <label for="email">Email:</label>
+                <input type="email" name="" id="">
+                <label for="subeject">Assunto:</label>
+                <input type="text">
+                <label for="">Mensagem:</label>
+                <textarea name="" id=""></textarea>
+                <button class="butao" type="submit">Enviar</button>
+            </form>
+
+        </section>
+
+    </main>
+
+    <footer>
+
+        <p>Feito Por Christian Alvim 2024</p>
+
+    </footer>
+
 
 
 </body>
+
 </html>
